fixed desktop polls not fitting in the desired container and removed its overflow scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -207,12 +207,17 @@ li img {
     }
 
     .container {
-        margin-left: 100px;
+        margin-left: 10vh;
+        max-width: 80vw;
+        min-height: 100vh;
+        overflow: visible;
+        padding: 0 0px;
     }
 
     /*polls menu */
     ul {
-
+    width: 100%;
+        grid-template-columns: repeat(3, 1fr);
     }
 
 
